# $Id$
#

SUBDIRS = icons

EXTRA_DIST = $(wildcard *.desktop)

maintainer-clean-local:
	rm -f Makefile.in

actionsdir = $(kde_datadir)/konqueror/servicemenus
actions_DATA = psion-drive-actions.desktop

devmimedir = $(kde_mimedir)/inode
devmime_DATA = x-psion-drive.desktop

appmimedir = $(kde_mimedir)/application
appmime_DATA = \
	x-psion-agenda.desktop \
	x-psion-backlite.desktop \
	x-psion-comms.desktop \
	x-psion-data.desktop \
	x-psion-encryptit.desktop \
	x-psion-opl.desktop \
	x-psion-opo.desktop \
	x-psion-record.desktop \
	x-psion-record2.desktop \
	x-psion-sheet.desktop \
	x-psion-sketch.desktop \
	x-psion-word.desktop \
	x-psion-owner.desktop \
	x-psion-machine.desktop \
	x-psion-setup.desktop \
	x-psion-backup.desktop \
	x-psion-restore.desktop
